--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express-handlebars": "^3.1.0",
     "mysql": "^2.17.1",
     "mysql2": "^1.7.0",
+    "paypal-rest-sdk": "^1.8.1",
     "sequelize": "^5.19.3"
   },
   "devDependencies": {},
